--- a/style.css
+++ b/style.css
@@ -1,132 +1,75 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Contato</title>
+</head>
+<body>
+    <div class="background">
+        <header>
+            <div class="logo">
+                <i class="fa-solid fa-p"></i>
+            </div>
+            <div class="cabeçalho">
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="sobre.html">Sobre</a>
+                </li>
+                <li>
+                    <a href="sonhos.html">Sonhos</a>
+                </li>
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-    font-family: "Poppins", sans-serif;
-}
+                <a href="contato.html"><button>Meu contato</button></a>
+            </div>
+        </header>
 
-body{
-    overflow: hidden;
-}
-.background{
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
-    background-image: url(background.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-}
+        <div class="container-text">
+            <div class="text">
+                <h1>Meu contato</h1>
+                <h2>Localização</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro excepturi <br>
+                    tempore tenetur autem maiores fugatempora culpa eligendi dolorum,libero <br>
+                    accusamus vel nemo cum saepe. Soluta adipisci illo unde laudantium?</p>
 
-header{
-    display: flex;
-    justify-content: space-around;
-    max-width: 100%;
-    align-items: center;
-    text-align: center;
-    padding-top: 1rem;
-}
-.cabeçalho{
-    display: flex;
-    gap: 3rem;
-    font-weight: 300;
-    cursor: pointer;
-}
+                    <br>
+                    <br>
+                    <br>
+                    <h4>Siga-me</h4>
+                <div class="social">
+                    <a href="https://www.instagram.com/paulokksk/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://github.com/Paulokksk10"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://open.spotify.com/user/31pyslerh6jlzast5ymfxslqq3d4?si=3ed6002e5d08444f"><i class="fa-brands fa-spotify"></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="formulario" >
+            <form action="index.html" method="post"></form>
+            <div>
+                <label for="nome">Nome: </label>
+                <input type="nome" id="nome" placeholder="Insira seu nome"/>
+            </div>
+            <br>
+            <div>
+                <label for="email">E-mail: </label>
+                <input type="email" id="email" placeholder="Insira seu E-mail"/>
+            </div>
+            <br>
+            <div>
+                <label for="msg">Mensagem: </label>
+                <textarea id="msg"></textarea>
+            </div>
+            <br>
+            <div class="button">
+                <button type="submit">Enviar sua mensagem</button>
+            </div>
+        </div>
+    </div>
 
-.cabeçalho a{
-    color: #fff;
-    font-size: 14px;
-}
-
-.cabeçalho a:hover{
-    color: #9e9e9e;
-    transition: 0.3s all;
-}
-
-.logo{
-    height: 40px;
-    width: 40px;
-    background: transparent;
-    border: 1px solid #9e9e9e;
-    color: #9e9e9e;
-    border-radius: 50%;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 15px;
-    cursor: pointer;
-}
-
-button{
-    color: #9e9e9e;
-    background: transparent;
-    border: solid 1px #9e9e9e;
-    padding: 5px;
-    border-radius: 15px;
-    font-size: 14px;
-    width: 150px;
-    cursor: pointer;
-}
-
-button:hover{
-    background: #9e9e9e;
-    color: #000;
-    transition: 0.4s;
-}
-
-.section {
-    min-height: 100vh;
-  }
-
-.container-text{
-    padding: 150px 0 0 130px;
-}
-
-.text h3{
-    color: #fff;
-    font-size: 20px;
-}
-.local {
-    margin-top: 50px;
-    margin-left: 1000px;
-}
-
-.if {
-    margin-top: -700px;
-    margin-left: 1300px;
-}
-
-.text h2{
-    color: #9e9e9e;
-}
-
-.text h1{
-    color: #fff;
-    font-size: 50px;
-    margin-top: 10px;
-}
-
-.text span{
-    color: #9e9e9e;
-}
-
-.text p{
-    color: #fff;
-    font-size: 20px;
-    font-weight: 300;
-    margin-top: 10px;
-    margin-bottom: 5px;
-}
-
-.social a{
-    color: #9e9e9e;
-    padding: 10px;
-    margin-top: 5px;
-}
-
-.btn{
-    margin-top: 10px;
-}
-
+</body>
+</html>
