--- a/style.css
+++ b/style.css
@@ -142,48 +142,47 @@ button:hover{
     margin-top: -400px;
 }
 
-form {
-    margin: 0 auto;
-    width: 400px;
-    padding: 1em;
 
-    border-radius: 1em;
-}
-form div + div {
-    margin-top: 1em;
-}
-label {
-    display: inline-block;
-    width: 90px;
-    text-align: right;
-}
-input, textarea {
-    font: 1em sans-serif;
-
-    width: 300px;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-
-    border: 1px solid #999;
-}
-
-textarea {
-    vertical-align: top;
-    height: 5em;
-    resize: vertical;
-}
-
-.button {
-    padding-left: 90px; 
-}
-button {
-
-    margin-left: .5em;
-}
 
 .if img{
     border-radius: 50%;
 }
 .local img {
     border-radius:20%;
+}
+
+
+fieldset{
+    border: 0;
+}
+
+input, textarea, button{
+    border-radius: 5px;
+}
+
+.formulario {
+    margin-bottom: 1em;
+}
+
+.formulario label{
+    margin-bottom: 0.2em;
+    display:block;
+    color:#9e9e9e;
+    
+}
+
+fieldset{
+    float: left;
+    margin-right:1em;
+}
+
+.formulario input[type="nome"], .formulario input[type="email"], .formulario textarea {
+    padding: 0.2em;
+    border: 1px solid #9e9e9e;
+    box-shadow: 2px 2px 2px rgb(0, 0, 0, 0.2);
+    display: block;
+}
+
+.formulario input:focus, .formulario textarea:focus{
+    background: #9e9e9e;
 }
