--- a/style.css
+++ b/style.css
@@ -186,3 +186,11 @@ fieldset{
 .formulario input:focus, .formulario textarea:focus{
     background: #9e9e9e;
 }
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    justify-content: space-evenly;
+    padding: 150px 0 0 130px;
+}
